<resources>
    <string name="app_name">StudentDelivery</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="uni_drive">UNI-Drive</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">SIGNUP</string>
    <string name="user_name">User Name</string>
    <string name="rewrite_password">Rewrite Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="profile_image">profile image</string>
    <string name="university">University</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="forgetPassword">Forgot your password?</string>
    <string name="Continue">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resend">Resend</string>
    <string name="pin_well_expire_after_5_00_minute">Pin well expire after %d:%d minute</string>
    <string name="enter_your_pin_code">Enter your Pin Code</string>
    <string name="pin_expired">pin expired please try again</string>
    <string name="create_new_password">Create new password</string>
    <string name="hint_new_password">Your new password must be different from previously used password.</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="email_error">The email address or\n password doesn\'t match any account.</string>
    <string name="ride_times">Ride times</string>
    <string name="go">Go</string>
    <string name="comeback">Comeback</string>
    <string name="uni">University</string>
    <string name="city">City</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="empty_seats">Number of empty seats:</string>
    <string name="cost">Cost:</string>
    <string name="details">Details:</string>
    <string name="private_string">Private</string>
    <string name="price">Price</string>
    <string name="number">Number</string>
    <string name="information_about_the_ride">Information about the ride…</string>
    <string-array name="gender_spinner">
        <item>No</item>
        <item>Male only</item>
        <item>Female only</item>
    </string-array>
    <string-array name="universities">
        <item>جامعة العلوم الاسلامية</item>
        <item>الجامعة الاردنية</item>
        <item>جامعة اليرموك</item>
        <item>جامعة مؤتة</item>
        <item>جامعة العلوم والتكنولوجيا</item>
        <item>الجامعة الهاشمية</item>
        <item>جامعة ال البيت</item>
        <item>جامعة البلقاء التطبيقية</item>
        <item>جامعة الحسين بن طلال</item>
        <item>جامعة الطفيلة التقنية</item>
        <item>الجامعة الالمانية</item>
    </string-array>
    <string-array name="cities">
        <item>عمان</item>
        <item>اربد</item>
        <item>البلقاء</item>
        <item>جرش</item>
        <item>الزرقاء</item>
        <item>الطفيلة</item>
        <item>عجلون</item>
        <item>العقبة</item>
        <item>الكرك</item>
        <item>مادبا</item>
        <item>معان</item>
        <item>المفرق</item>
    </string-array>
    <string-array name="amman_neighborhoods">
        <item>طبربور</item>
        <item>الجبيهة</item>
        <item>الوحدات</item>
        <item>ابو نصير</item>
        <item>صويلح</item>
        <item>تلاع العلي</item>
    </string-array>
    <string-array name="zarqa_neighborhoods">
        <item>حي الاميرة رحمة</item>
        <item>الرصيفة</item>
        <item>حي النزهة</item>
        <item>الزرقاء الجديدة</item>
    </string-array>
    <string-array name="balqa_neighborhoods">
        <item>زي</item>
        <item>عين الباشا</item>
        <item>ماحص</item>
    </string-array>
    <string-array name="aqaba_neighborhoods">
        <item>الريشة</item>
        <item>القويرة</item>
        <item>الديسة</item>
    </string-array>
    <string-array name="maan_neighborhoods">
        <item>الشوبك</item>
        <item>الجفر</item>
        <item>البتراء</item>
    </string-array>
    <string-array name="madaba_neighborhoods">
        <item>ماعين</item>
        <item>مليح</item>
        <item>ذيبان</item>
    </string-array>
    <string-array name="jarash_neighborhoods">
        <item>برما</item>
        <item>جرش</item>
        <item>المصطبة</item>
    </string-array>
    <string-array name="ajloun_neighborhoods">
        <item>عرجان</item>
        <item>كفرنجة</item>
        <item>صخرة</item>
    </string-array>
    <string-array name="irbid_neighborhoods">
        <item>الرمثا</item>
        <item>الصريح</item>
        <item>الحصن</item>
        <item>حوارة</item>
    </string-array>
    <string-array name="tafila_neighborhoods">
        <item>الحسا</item>
        <item>بصيرا</item>
    </string-array>
    <string-array name="karak_neighborhoods">
        <item>القطرانة</item>
        <item>الصافي</item>
        <item>المغير</item>
    </string-array>
    <string-array name="mafraq_neighborhoods">
        <item>بلعما</item>
        <item>المنشية</item>
        <item>الخالدية</item>
    </string-array>
    <string name="title_activity_requests">RequestsActivity</string>
    <string name="rides">Rides</string>
    <string name="profile">Profile</string>
    <string name="gender_specific">Gender-specific:</string>
    <string name="go_time">Go time:</string>
    <string name="comeback_time">Comeback time:</string>
    <string name="change_password">Change Password</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="log_out">Log Out</string>
    <string name="my_ride">My Ride</string>
    <string name="account_information">Account Information</string>
    <string name="email_to_reset_password">Enter your email to reset your password:</string>
    <string name="check_email_for_pin">Check your email for pin code.</string>
    <string name="report_text">Write down the problem you\'re facing in the box below. If you want to report a user, please provide their email address.</string>
    <string name="send">Send</string>
    <string name="report_hint">Write down the problem here…</string>
    <string name="authentication">Authentication:</string>
    <string name="select_image">Select Image</string>
    <string name="auth_text">You need to take/upload a picture of your Student ID in order to verify your identity.</string>
    <string name="finish">Finish</string>
    <string name="car_color">Car Color</string>
    <string name="car_model">Car Model</string>
    <string name="car_number">Car Number</string>
    <string name="car_details">Car Details:</string>

    <string-array name="graduate_year">
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>
</resources>